# valuz-oss

./: .gitignore  .tool-versions  .worktreeinclude  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  README.zh-CN.md
api/: openapi.yaml
backend/: CLAUDE.md  pyproject.toml  valuz_agent.spec
backend/alembic/host/: alembic.ini  env.py
backend/alembic/host/versions/: 0001_initial_schema.py  0002_add_fable5_to_claude_subscription.py  0002_add_skill_origin.py  0002_project_session_index.py
backend/alembic/kernel/: alembic.ini  env.py
backend/alembic/kernel/versions/: 0001_kernel_initial_schema.py
backend/kernel/: KERNEL_VERSION  __init__.py
backend/kernel/app/: __init__.py  _validators.py  config.py  dependencies.py  main.py  mcp_toolkit_router.py  sandbox_control.py  schemas.py  serializers.py  ws_sink.py
backend/kernel/app/routes/: agents.py  messages.py  projects.py  run.py  sessions.py  usage.py
backend/kernel/src/adapters/: __init__.py  callback_sink.py  composite_sink.py  database_sink.py  delta_coalescing_sink.py  persist_then_broadcast_sink.py  stdout_sink.py
backend/kernel/src/core/: __init__.py  agent_config.py  approval_rule_matcher.py  events.py  hooks.py  mcp_bridge.py  orchestrator.py  owner_context.py  project.py  prompt_builder.py  rule_canonicalize.py  runtime_port.py  session_approval_cache.py  session_bus.py  skills.py  store_port.py  time_utils.py  tool_registry.py  tools.py  types.py  workspace.py
backend/kernel/src/runtimes/: factory.py  mcp_env.py  skills_materialize.py
backend/plugins/: __init__.py
backend/plugins/parser/: __init__.py
backend/plugins/parser/light_local/: __init__.py
backend/plugins/parser/mineru/: __init__.py  handler.py  plugin.py
backend/plugins/parser/paddleocr/: __init__.py  handler.py  plugin.py
backend/plugins/parser/valuz_ocr/: __init__.py
backend/scripts/: check_module_boundaries.py  dump_schema.py  recover_orphaned_tasks.py  sync_official_skills.py  valuz_agent.spec
backend/scripts/pyinstaller_hooks/: hook-cryptography.py
backend/tests/: conftest.py  test_auth_extension.py  test_database_abstraction.py  test_database_pg.py  test_i18n_check_keys.py  test_i18n_gen_types.py  test_kernel_validators.py  test_llm_provider_port.py  test_runtime_context.py  test_saas_ports.py
backend/tests/adapters/: test_brief_length_guard.py  test_capability_resolver.py  test_event_sse_adapter.py  test_event_sse_adapter_approval.py  test_event_sse_adapter_dedup.py  test_event_sse_adapter_window.py  test_events_stream_dedup.py  test_http_kernel_client_run_turn.py  test_http_kernel_client_subprocess.py  test_kernel_client_contract.py  test_kernel_store_owner_scoping.py  test_mcp_resolver.py  test_model_resolver.py  test_persist_then_broadcast.py  test_provider_resolver.py  test_provider_resolver_system.py  test_runtime_registry.py  test_usage_rollup.py
backend/tests/api/: test_access_log_levels.py  test_connectors_tool_info.py  test_onboarding_deploy_target.py  test_session_action_request_invariants.py
backend/tests/boot/: test_http_mode_guards.py  test_kernel_db_separation.py
backend/tests/infra/: test_access_log_filter.py  test_ownership.py  test_single_writer.py  test_sse_shielded.py
backend/tests/integrations/: test_sandbox_dynamic_mount.py  test_sandbox_seatbelt.py  test_toolkit_mcp_server.py
backend/tests/migrations/: test_host_baseline_reset.py  test_kernel_table_dropout.py
backend/tests/modules/: test_blocking_offload.py  test_parse_pool_offload.py
backend/tests/modules/agents/: test_agent_avatar.py  test_agent_live_reference.py  test_owner_scoping.py  test_slug.py
backend/tests/modules/automations/: test_automation_service.py  test_automation_tool.py  test_owner_scoping.py  test_timezone_behavior.py  test_trigger_evaluator.py
backend/tests/modules/connectors/: test_acceptance.py  test_connector_credential_split.py  test_mcp_tool_registration.py  test_owner_scoping.py
backend/tests/ports/: test_workspace_handle.py
backend/tests/providers/: test_parser_light_local_html.py  test_parser_mineru.py  test_parser_paddleocr.py  test_skills_official_bootstrap.py
backend/tests/runtimes/: test_claude_advisor_env.py  test_claude_buffer_size.py  test_codex_session_error.py
backend/tests/scripts/: _e2e_chatplan_http.py  _e2e_kernel_messages_todos.py  _smoke_docs_mcp.py  test_check_module_boundaries.py
backend/tests/seeds/: test_providers_json.py
backend/valuz_agent/: __main__.py  cli.py  i18n.py  main.py
backend/valuz_agent/adapters/: __init__.py  agent_resolver.py  broadcast_sink.py  capability_resolver.py  event_sse_adapter.py  kernel_client.py  kernel_client_http.py  kernel_store.py  kernel_sync.py  mcp_resolver.py  model_resolver.py  provider_resolver.py  runtime_registry.py  system_prompt_builder.py
backend/valuz_agent/api/: app.py  deps.py  middleware.py
backend/valuz_agent/boot/: __init__.py  kernel.py  lifespan.py  schema.py  steps.py
backend/valuz_agent/infra/: auth_context.py  config.py  container.py  database.py  db.py  errors.py  eventbus.py  events.py  file_watcher.py  fs_registry.py  health.py  local_identity.py  logging.py  middleware_registry.py  module_registry.py  owner_context.py  parse_pool.py  secret_store.py  single_writer.py  sse.py  time_utils.py
backend/valuz_agent/integrations/: automations_mcp_server.py  connector_oauth.py  connectors_mcp_server.py  docs_embedded.py  docs_mcp_server.py  identity_local.py  parser_light_local.py  sandbox_runtime.py  sandbox_seatbelt.py  skills_filesystem.py  skills_official.py  skills_official_bootstrap.py  toolkit_mcp_server.py  tools_core.py  tools_skill_creator.py
backend/valuz_agent/ports/: __init__.py  billing.py  docs_runtime.py  extensions.py  identity.py  llm_provider.py  mcp_catalog.py  parser_backend.py  parser_plugin.py  provider_policy.py  resource_enhancer.py  resource_sync.py  sandbox_provider.py  skill_registry.py  tool_provider.py  workspace.py
backend/valuz_agent/resources/: connector_catalog.json  subscription_models.json
backend/valuz_agent/seeds/: __init__.py  _io.py  providers.py
(+364 files in other folders)
